added radial progress section

--- a/index.html
+++ b/index.html
@@ -75,9 +75,8 @@
           <a class="btn bg-red-500 text-white">Get Ticket</a>
         </div>
       </div>
-      <!-- navbar ends -->
+      <!-- Slider section -->
       <section class="my-20">
-        <!-- Slider section -->
         <div class="carousel w-full">
           <div id="slide1" class="carousel-item relative w-full">
             <img src="Images/1.png" class="w-full" />
@@ -127,7 +126,80 @@
         </div>
       </section>
     </header>
-    <main></main>
+    <main>
+      <!-- progress section -->
+      <section class="text-center">
+        <h3 class="text-3xl font-extrabold text-[#131318]">
+          Professional Hockeys Club
+        </h3>
+        <p class="text-base font-medium space-y-2">
+          Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis
+          placerat dolor. Purus urna in sit nullam proin.
+        </p>
+
+        <div
+          class="gap-5 flex-col my-20 flex lg:flex-row lg:gap-2 justify-between"
+        >
+          <div>
+            <div
+              class="radial-progress text-[#FF4240]"
+              style="--value: 87"
+              role="progressbar"
+            >
+              87%
+            </div>
+            <p class="text-xl font-semibold">Prayer Facility</p>
+            <p>
+              Amet consectetur. Condimentum,<br />
+              dignissim adipiscing .
+            </p>
+          </div>
+
+          <div>
+            <div
+              class="radial-progress text-[#49D293]"
+              style="--value: 95"
+              role="progressbar"
+            >
+              95%
+            </div>
+            <p class="text-xl font-semibold">Experienced Coach</p>
+            <p>
+              Amet consectetur. Condimentum<br />
+              dignissim adipiscing .
+            </p>
+          </div>
+          <div>
+            <div
+              class="radial-progress text-[#FFB546]"
+              style="--value: 90"
+              role="progressbar"
+            >
+              90%
+            </div>
+            <p class="text-xl font-semibold">Senior Player</p>
+            <p>
+              Amet consectetur. Condimentum,<br />
+              dignissim adipiscing .
+            </p>
+          </div>
+          <div>
+            <div
+              class="radial-progress text-[#4C8DF1]"
+              style="--value: 80"
+              role="progressbar"
+            >
+              80%
+            </div>
+            <p class="text-xl font-semibold">Training Ground</p>
+            <p>
+              Amet consectetur. Condimentum,<br />
+              dignissim adipiscing .
+            </p>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
