added the program section including the image part and description part

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       }
     </style>
   </head>
-  <body class="manrope-font mx-28">
+  <body class="manrope-font mx-24">
     <header>
       <!-- Navbar Section -->
       <div class="navbar bg-base-100">
@@ -127,7 +127,7 @@
       </section>
     </header>
     <main>
-      <!-- progress section -->
+      <!-- Radial progress section -->
       <section class="text-center">
         <h3 class="text-3xl font-extrabold text-[#131318]">
           Professional Hockeys Club
@@ -196,6 +196,99 @@
               Amet consectetur. Condimentum,<br />
               dignissim adipiscing .
             </p>
+          </div>
+        </div>
+      </section>
+      <!-- Program Section -->
+      <section>
+        <div class="text-center space-y-4 mb-5">
+          <h4 class="text-4xl font-extrabold">Program Sections</h4>
+          <p class="font-medium">
+            Dit amet consectetur. Condimentum dignissim adipiscing aliquam
+            turpis placeratbr <br />
+            dolor. Purus urna in sit nullam proin.
+          </p>
+        </div>
+        <!-- Text Overlay part -->
+        <div class="grid">
+          <div class="flex-row lg:flex gap-3 mb-3 rounded-xl">
+            <!-- first photo -->
+            <div class="relative">
+              <img class="" src="Images/2.png" alt="Image" />
+              <div
+                class="absolute inset-0 flex flex-col items-baseline justify-center pl-10"
+              >
+                <h1 class="text-white text-3xl font-bold pb-2">
+                  Junior Program
+                </h1>
+                <p class="text-white font-medium pb-4">
+                  Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
+                  elit <br />
+                  enim sagittis turpis in magna. Id et sed euismod natoque amet
+                  <br />
+                  nunc morbi nulla. Tortor congue sed et in.
+                </p>
+                <button
+                  class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded"
+                >
+                  Register Now!
+                </button>
+              </div>
+            </div>
+            <!-- second Photo -->
+            <div class="relative">
+              <img
+                src="Images/3.png"
+                alt="Image"
+                class="h-auto bg-[#13131880] rounded-xl"
+              />
+              <div
+                class="absolute inset-0 flex flex-col items-baseline justify-center pl-10"
+              >
+                <h1 class="text-white text-3xl font-bold pb-2">
+                  Teenager Program
+                </h1>
+                <p class="text-white font-medium pb-4">
+                  Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
+                  elit <br />
+                  enim sagittis turpis in magna. Id et sed euismod natoque amet
+                  <br />
+                  nunc morbi nulla. Tortor congue sed et in.
+                </p>
+                <button
+                  class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded"
+                >
+                  Register Now!
+                </button>
+              </div>
+            </div>
+          </div>
+          <!-- third photo -->
+          <div class="relative">
+            <img
+              src="Images/4.png"
+              alt="Image"
+              class="h-auto rounded-xl mb-14 bg-[#13131880]"
+            />
+            <div
+              class="absolute inset-0 flex flex-col items-baseline justify-center pl-10"
+            >
+              <h1 class="text-white text-3xl pb-6 font-bold">
+                Professional Program
+              </h1>
+              <p class="text-white font-medium pb-4">
+                Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
+                elit <br />
+                enim sagittis turpis in magna. Id et sed euismod natoque amet
+                <br />
+                nunc morbi nulla. Tortor congue sed et in.
+              </p>
+              <button
+                class="bg-[#FF4240] hover:bg-black text-white font-bold py-2 px-4 rounded"
+              >
+                Register Now!
+              </button>
+            </div>
           </div>
         </div>
       </section>
