--- a/index.html
+++ b/index.html
@@ -292,6 +292,45 @@
           </div>
         </div>
       </section>
+      <!--Product section  -->
+      <section>
+        <div class="text-center space-y-5">
+          <h4 class="text-4xl font-extrabold">Our New Products</h4>
+          <p>
+            Dit amet consectetur. Condimentum dignissim adipiscing aliquam
+            turpis placerat <br />
+            dolor. Purus urna in sit nullam proin.
+          </p>
+        </div>
+        <!-- Product 1 -->
+        <div class="flex">
+          <div>
+            <img src="Images/5.png" alt="" />
+          </div>
+
+          <div class="flex gap-2 w-5 h-5">
+            <img src="Images/Vector.png" alt="" />5.0
+            <img src="Images/Frame (4).png" alt="" />20
+            <img src="Images/Frame (5).png" alt="" />200
+          </div>
+          <div>
+            <div>
+              <h4 class="text-3xl font-extrabold mt-8">
+                World Cup Flags Football
+              </h4>
+              <p>
+                Dolor sit amet consectetur. Ut urna diam <br />
+                quis sagittis.
+              </p>
+            </div>
+            <div class="flex gap-2">
+              <p class="text-red-600 font-bold">Price - $22.00</p>
+              <img src="Images/Frame (6).png" alt="" />
+              <p>Delivery Fee : Free</p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
