added product section completely

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       }
     </style>
   </head>
-  <body class="manrope-font mx-24">
+  <body class="mx-14 box-border manrope-font">
     <header>
       <!-- Navbar Section -->
       <div class="navbar bg-base-100">
@@ -302,31 +302,172 @@
             dolor. Purus urna in sit nullam proin.
           </p>
         </div>
-        <!-- Product 1 -->
-        <div class="flex">
-          <div>
-            <img src="Images/5.png" alt="" />
-          </div>
 
-          <div class="flex gap-2 w-5 h-5">
-            <img src="Images/Vector.png" alt="" />5.0
-            <img src="Images/Frame (4).png" alt="" />20
-            <img src="Images/Frame (5).png" alt="" />200
-          </div>
-          <div>
-            <div>
-              <h4 class="text-3xl font-extrabold mt-8">
-                World Cup Flags Football
-              </h4>
-              <p>
-                Dolor sit amet consectetur. Ut urna diam <br />
-                quis sagittis.
-              </p>
+        <div class="sm:flex-row gap-4 lg:flex mb-5">
+          <!-- Product 1 -->
+          <div class="flex border-2 p-6">
+            <div class="sm:flex-row lg:flex shadow-xl rounded-xl">
+              <div>
+                <img class="p-4" src="Images/5.png" alt="Movie" />
+              </div>
+
+              <div class="card-body">
+                <p class="flex gap-2">
+                  <img src="Images/Vector.png" alt="" />5.0
+                  <img src="Images/Frame (4).png" alt="" /> 20
+                  <img src="Images/Frame (5).png" alt="" />200
+                </p>
+                <h2 class="card-title">World Cup Flags Football</h2>
+                <p>
+                  Dolor sit amet consectetur. Ut urna diam <br />
+                  quis sagittis.
+                </p>
+                <p class="flex gap-2">
+                  <span class="text-red-600 font-extrabold"
+                    >Price - $22.00</span
+                  >
+                  <img src="Images/Frame (6).png" alt="" />Delivery Fee : Free
+                </p>
+              </div>
             </div>
-            <div class="flex gap-2">
-              <p class="text-red-600 font-bold">Price - $22.00</p>
-              <img src="Images/Frame (6).png" alt="" />
-              <p>Delivery Fee : Free</p>
+          </div>
+          <!-- Product 2 -->
+          <div class="flex border-2 p-6">
+            <div class="sm:flex-row lg:flex shadow-xl rounded-xl">
+              <div>
+                <img class="p-4" src="Images/6.png" alt="Movie" />
+              </div>
+
+              <div class="card-body">
+                <p class="flex gap-2">
+                  <img src="Images/Vector.png" alt="" />5.0
+                  <img src="Images/Frame (4).png" alt="" /> 20
+                  <img src="Images/Frame (5).png" alt="" />200
+                </p>
+                <h2 class="card-title">World Cup Flags Football</h2>
+                <p>
+                  Dolor sit amet consectetur. Ut urna diam <br />
+                  quis sagittis.
+                </p>
+                <p class="flex gap-2">
+                  <span class="text-red-600 font-extrabold"
+                    >Price - $22.00</span
+                  >
+                  <img src="Images/Frame (6).png" alt="" />Delivery Fee : Free
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="sm:flex-row gap-4 lg:flex mb-5">
+          <!-- Product 3 -->
+          <div class="flex border-2 p-6">
+            <div class="sm:flex-row lg:flex shadow-xl rounded-xl">
+              <div>
+                <img class="p-4" src="Images/7.png" alt="Movie" />
+              </div>
+
+              <div class="card-body">
+                <p class="flex gap-2">
+                  <img src="Images/Vector.png" alt="" />5.0
+                  <img src="Images/Frame (4).png" alt="" /> 20
+                  <img src="Images/Frame (5).png" alt="" />200
+                </p>
+                <h2 class="card-title">World Cup Flags Football</h2>
+                <p>
+                  Dolor sit amet consectetur. Ut urna diam <br />
+                  quis sagittis.
+                </p>
+                <p class="flex gap-2">
+                  <span class="text-red-600 font-extrabold"
+                    >Price - $22.00</span
+                  >
+                  <img src="Images/Frame (6).png" alt="" />Delivery Fee : Free
+                </p>
+              </div>
+            </div>
+          </div>
+          <!-- Product 4 -->
+          <div class="flex border-2 p-6">
+            <div class="sm:flex-row lg:flex shadow-xl rounded-xl">
+              <div>
+                <img class="p-4" src="Images/8.png" alt="Movie" />
+              </div>
+
+              <div class="card-body">
+                <p class="flex gap-2">
+                  <img src="Images/Vector.png" alt="" />5.0
+                  <img src="Images/Frame (4).png" alt="" /> 20
+                  <img src="Images/Frame (5).png" alt="" />200
+                </p>
+                <h2 class="card-title">World Cup Flags Football</h2>
+                <p>
+                  Dolor sit amet consectetur. Ut urna diam <br />
+                  quis sagittis.
+                </p>
+                <p class="flex gap-2">
+                  <span class="text-red-600 font-extrabold"
+                    >Price - $22.00</span
+                  >
+                  <img src="Images/Frame (6).png" alt="" />Delivery Fee : Free
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="sm:flex-row gap-4 mb-5 lg:flex">
+          <!-- Product 5 -->
+          <div class="flex border-2 p-6">
+            <div class="sm:flex-row lg:flex shadow-xl rounded-xl">
+              <div>
+                <img class="p-4" src="Images/9.png" alt="Movie" />
+              </div>
+
+              <div class="card-body">
+                <p class="flex gap-2">
+                  <img src="Images/Vector.png" alt="" />5.0
+                  <img src="Images/Frame (4).png" alt="" /> 20
+                  <img src="Images/Frame (5).png" alt="" />200
+                </p>
+                <h2 class="card-title">World Cup Flags Football</h2>
+                <p>
+                  Dolor sit amet consectetur. Ut urna diam <br />
+                  quis sagittis.
+                </p>
+                <p class="flex gap-2">
+                  <span class="text-red-600 font-extrabold"
+                    >Price - $22.00</span
+                  >
+                  <img src="Images/Frame (6).png" alt="" />Delivery Fee : Free
+                </p>
+              </div>
+            </div>
+          </div>
+          <!-- Product 6 -->
+          <div class="flex border-2 p-6">
+            <div class="sm:flex-row lg:flex shadow-xl rounded-xl">
+              <div>
+                <img class="p-4" src="Images/10.png" alt="Movie" />
+              </div>
+
+              <div class="card-body">
+                <p class="flex gap-2">
+                  <img src="Images/Vector.png" alt="" />5.0
+                  <img src="Images/Frame (4).png" alt="" /> 20
+                  <img src="Images/Frame (5).png" alt="" />200
+                </p>
+                <h2 class="card-title">World Cup Flags Football</h2>
+                <p>
+                  Dolor sit amet consectetur. Ut urna diam <br />
+                  quis sagittis.
+                </p>
+                <p class="flex gap-2">
+                  <span class="text-red-600 font-extrabold"
+                    >Price - $22.00</span
+                  >
+                  <img src="Images/Frame (6).png" alt="" />Delivery Fee : Free
+                </p>
+              </div>
             </div>
           </div>
         </div>
