made responsive to the footer section

--- a/index.html
+++ b/index.html
@@ -552,29 +552,51 @@
       </section>
     </main>
     <footer class="footer p-10 bg-black mt-10 mx-0 text-white">
-      <aside>
+      <div class="sm:pl-44 md:pl-0">
         <h4 class="text-3xl font-extrabold">Get In Touch</h4>
-        <p>ACME Industries Ltd.<br />Providing reliable tech since 1992</p>
-      </aside>
-      <nav>
-        <header class="footer-title">Company</header>
-        <a class="link link-hover">Branding</a>
-        <a class="link link-hover">Design</a>
-        <a class="link link-hover">Marketing</a>
-        <a class="link link-hover">Advertisement</a>
-      </nav>
-      <nav>
-        <header class="footer-title">Support</header>
-        <a class="link link-hover">About us</a>
-        <a class="link link-hover">Contact</a>
-        <a class="link link-hover">Jobs</a>
-        <a class="link link-hover">Press kit</a>
-      </nav>
-      <nav>
-        <header class="footer-title">Services</header>
-        <a class="link link-hover">Terms of use</a>
-        <a class="link link-hover">Privacy policy</a>
-        <a class="link link-hover">Cookie policy</a>
+        <p>
+          Reach out to us through the e-mail <br />
+          or the phone number that are provided <br />
+          to our website respectively
+        </p>
+
+        <div class="flex gap-2">
+          <img src="Images/Frame (7).png" alt="" />hockeys@support.com
+        </div>
+        <div class="flex gap-2">
+          <img src="Images/Frame (8).png" alt="" />(+62) 123-321-543
+        </div>
+      </div>
+      <div class="flex justify-between gap-48 md:">
+        <nav class="sm:pl-16 md:pl-0 sm:text-center md:text-start">
+          <header class="sm:text-3xl font-bold mb-2">Company</header>
+          <a class="link link-hover"
+            >About us <br />
+            Leadership <br />
+            Careers <br />
+            News & Article <br />
+            Legal Notice</a
+          >
+        </nav>
+        <nav class="sm:text-center md:text-start">
+          <header class="sm:text-3xl font-bold mb-2">Support</header>
+          <a class="link link-hover"
+            >Help Center <br />
+            FAQ <br />
+            Ticket Support <br />
+            Contact Us</a
+          >
+        </nav>
+      </div>
+      <nav class="sm:pl-56 sm:text-center md:text-start md:pl-0">
+        <header class="sm:text-3xl font-bold">Services</header>
+        <a class="link link-hover"
+          >Academy <br />
+          Group Lesson <br />
+          Private Lesson <br />
+          Hockeys for kids <br />
+          Hockeys for Adult</a
+        >
       </nav>
     </footer>
   </body>
