added FAQ section and made it responsive as well

--- a/index.html
+++ b/index.html
@@ -484,67 +484,86 @@
         </div>
       </section>
       <!------------- Clients Questions section -->
+
       <section>
         <div class="text-center space-y-4 my-16">
           <h4 class="text-4xl font-extrabold">Clients Question</h4>
-          <p>
-            Dit amet consectetur. Condimentum dignissim adipiscing aliquam
-            turpis placerat dolor. Purus urna in sit nullam proin.
+          <p class="font-medium">
+            Don't Forget To Check Out This FAQ Section For Getting Answers Of
+            Your Anticipated Questions Instantly.
           </p>
         </div>
 
-        <div class="flex flex-1 justify-between">
+        <div class="flex gap-8 sm:items-center lg:flex-row sm:flex-col">
           <div class="">
             <img src="Images/11.png" alt="" />
           </div>
-          <!-- Faq -->
-          <div>
+          <!------------------- FAQ ---------------->
+          <div class="sm:w-[450px] md:w-[800px] space-y-1">
             <div class="collapse collapse-plus bg-base-200">
               <input type="radio" name="my-accordion-3" checked="checked" />
               <div class="collapse-title text-xl font-medium">
                 Our Equipment
               </div>
               <div class="collapse-content">
-                <p>hello</p>
+                <p>All Of Our Equipments Have High Quality</p>
               </div>
             </div>
+            <hr />
             <div class="collapse collapse-plus bg-base-200">
               <input type="radio" name="my-accordion-3" />
               <div class="collapse-title text-xl font-medium">
                 Hockey Training
               </div>
               <div class="collapse-content">
-                <p>hello</p>
+                <p>
+                  You Can Get Our Hockey Training Session By Signing Up Through
+                  Our Website
+                </p>
               </div>
             </div>
+            <hr />
             <div class="collapse collapse-plus bg-base-200">
               <input type="radio" name="my-accordion-3" />
               <div class="collapse-title text-xl font-medium">
                 Private Lessons
               </div>
               <div class="collapse-content">
-                <p>hello</p>
+                <p>
+                  We also Provide Private Session And All of Our Clients'
+                  Documents Are Highly Secured
+                </p>
               </div>
             </div>
+            <hr />
             <div class="collapse collapse-plus bg-base-200">
               <input type="radio" name="my-accordion-3" />
               <div class="collapse-title text-xl font-medium">Ski Touring</div>
               <div class="collapse-content">
-                <p>hello</p>
+                <p>
+                  Yay! We Brought To Our New Feature Training For Ski Lovers!
+                </p>
               </div>
             </div>
+            <hr />
             <div class="collapse collapse-plus bg-base-200">
               <input type="radio" name="my-accordion-3" />
               <div class="collapse-title text-xl font-medium">Booking</div>
               <div class="collapse-content">
-                <p>hello</p>
+                <p>
+                  Booking Is Open, Don't Get Late Dive Into It. Limited Time
+                  Offer!
+                </p>
               </div>
             </div>
+            <hr />
             <div class="collapse collapse-plus bg-base-200">
               <input type="radio" name="my-accordion-3" />
-              <div class="collapse-title text-xl font-medium">Pricings</div>
+              <div class="collapse-title text-xl font-medium">Pricing</div>
               <div class="collapse-content">
-                <p>hello</p>
+                <p>
+                  You Can Have All The Price Related Info From Website Directly
+                </p>
               </div>
             </div>
           </div>
